tests/baselines/reference/ArrowFunction2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction2.ts(1,13): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction2.ts (1 errors) ====
    var v = (a: b,) => {
                ~
!!! error TS2304: Cannot find name 'b'.
       
    };